kubernetes/services/media/prowlarr/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr
spec:
  selector: 
    matchLabels:
      app: prowlarr
  replicas: 1
  template:
    metadata:
      labels:
        app: prowlarr
    spec:
      containers:
      - image: lscr.io/linuxserver/prowlarr:latest
        name: prowlarr
        ports:
          - containerPort: 9696
            protocol: TCP
        volumeMounts:
          - mountPath: /config
            name: arrstack
            subPath: prowlarr
          - mountPath: /media
            name: smb
      volumes:
        - name: smb
          persistentVolumeClaim:
            claimName: jellyfin-smb-pvc
        - name: arrstack
          persistentVolumeClaim:
            claimName: arrstack-pvc
      restartPolicy: Always
