kubernetes/services/media/prowlarr/service.yml
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
  namespace: media 
spec:
  ports:
  - name: web
    port: 9696
  selector:
    app: prowlarr
