kubernetes/services/media/prowlarr/ingressroute.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prowlarr-ingressroute
  namespace: jellyfin
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`prowlarr.kube.eggenberg.io`)
    kind: Rule
    services:
    - name: prowlarr
      port: 9696
  tls:
    secretName: prowlarr-certificate-secret
